--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,13 @@
 }
 
 img {
+	position: relative; 
 	height: 300px;
 	width: auto;
+}
+
+.data{
+	padding: 50px;
 }
 
 .options {
@@ -40,7 +45,15 @@ img {
 }
 
 .tiles {
-	background-color: transparent;
+	display: flex;
+	background-color: black;
 	margin: 20px;
 	float: left;
+	padding: 2px
+}
+
+.text{
+	display: none;
+    position:absolute;
+    top:0px;
 }
