--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ img {
 	height: 300px;
 	width: auto;
 }
+#maintitle a{
+    text-decoration: none;
+    color: white
+}
 
 .data{
 	padding: 10px;
@@ -76,6 +80,14 @@ p {
   	margin: 0 auto;
 }
 
+.details {
+	background-color: white;
+  	width: 50%;
+  	height: 50%;
+  	padding: 30px;
+  	margin: 0 auto;
+}
+
 .text {
   background-color: white;
   color: black;
@@ -109,5 +121,9 @@ p {
 }
 
 .inactivepage {
+	display: none;
+}
+
+#arrow {
 	display: none;
 }
