--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 img {
 	position: relative; 
-	height: 300px;
+	height: 450px;
 	width: auto;
 }
 
@@ -30,7 +30,7 @@ img {
 
 
 .data{
-	padding: 10px;
+	padding: 10px 30px;
 }
 
 body {
