--- a/css/2.css
+++ b/css/2.css
@@ -7,8 +7,9 @@
 	width: 50vw;
 	height: auto;
 }
-
 #interactive{
-	height: 80vh;
-	width: 80vw;
+	height: 90vh;
+	width: 90vw;
+	margin: auto;
+	border: 3px solid black;
 }
