--- a/css/1.css
+++ b/css/1.css
@@ -1,5 +1,5 @@
 .projecttiles{
-	margin: 20vh 10vw;
+	margin: 20vh 5vw;
 	text-align: center;
 }
 
@@ -23,13 +23,29 @@
 }
 
 .projecttilescontainer{
-    position: relative;
     margin: auto;
     text-align: center;
+    font-family: Montserrat;
 }
 
-p {
-  margin: auto 15vw;
+.imagemidw {
+    position: relative;
+}
+
+.introduction{
+  margin: auto 13vw;
+  font-size: 25px;
+  text-align: left;
+  font-family: Montserrat;
+  line-height: 1.6;
+}
+
+.inlist {
+  list-style-type: disc;
+}
+
+.inlist li {
+  margin-left: 5vw;
 }
 
 .middleimg{
@@ -58,11 +74,20 @@ p {
 .projecttitle {
   margin: 40px 350px;
   text-align: center;
-  font-family: Bluefish Black Demo;
+  font-family: Montserrat;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 900;
   font-style: bold;
-  font-size: 30px;
+  font-size: 45px;
+  letter-spacing: 0.0555556em;
+}
+
+.projecttiles p{
+  margin: 40px 350px;
+  text-align: center;
+  font-family: Montserrat;
+  font-style: bold;
+  font-size: 25px;
   letter-spacing: 0.0555556em;
 }
 
@@ -81,17 +106,19 @@ p {
 .righttext{
   display: table-cell;
   vertical-align: middle;
-  text-align: left;
-  padding: 100px;
-  font-family: Bluefish Black Demo;
-  font-size: 30px;
+  text-align: center;
+  padding: 50px;
+  font-family: Montserrat;
+  font-size: 40px;
+  line-height: 1.3;
 }
 
 .lefttext{
   display: table-cell;
   vertical-align: middle;
-  text-align: left;
-  padding: 100px;
-  font-family: Bluefish Black Demo;
-  font-size: 30px;
+  text-align: center;
+  padding: 50px;
+  font-family: Montserrat;
+  font-size: 40px;
+  line-height: 1.3;
 }
