--- a/css/3.css
+++ b/css/3.css
@@ -1,18 +1,18 @@
 .projecttiles{
-	margin: 100px auto;
-	text-align: center;
+  margin: 20vh 5vw;
+  text-align: center;
 }
 
 .projecttiles img{
-	width: 50vw;
-	height: auto;
+  width: 50vw;
+  height: auto;
 }
 
 .interactive{
-	height: 80vh;
-	width: 80vw;
-	display: none;
-	margin: auto;
+  height: 80vh;
+  width: 80vw;
+  display: none;
+  margin: auto;
 }
 
 .iframeholder{
@@ -26,6 +26,11 @@
     position: relative;
     margin: auto;
     text-align: center;
+    font-family: Montserrat;
+}
+
+p {
+  margin: auto 10vw;
 }
 
 .middleimg{
@@ -49,4 +54,45 @@
 .darken{
   background-color: black;
   display: inline-block;
+}
+
+.projecttitle {
+  margin: 40px 350px;
+  text-align: center;
+  font-family: Montserrat;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-style: bold;
+  font-size: 45px;
+  letter-spacing: 0.0555556em;
+}
+
+.imgplaceholder{
+  padding-bottom: 10px;
+}
+
+.left{
+  float: left;
+}
+
+.right{
+  float: right;
+}
+
+.righttext{
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  padding: 50px;
+  font-family: Montserrat;
+  font-size: 40px;
+}
+
+.lefttext{
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  padding: 50px;
+  font-family: Montserrat;
+  font-size: 40px;
 }
