--- a/css/2.css
+++ b/css/2.css
@@ -8,7 +8,7 @@
 	height: auto;
 }
 
-.interactive{
+#interactive{
 	height: 80vh;
 	width: 80vw;
 	display: inline-block;
@@ -30,9 +30,25 @@
     font-family: Montserrat;
 }
 
-p {
-  margin: auto 10vw;
-  padding: 10px;
+.imagemidw {
+    position: relative;
+}
+
+.introduction{
+  margin: auto 13vw;
+  font-size: 25px;
+  font-size: 1.25vw;
+  text-align: left;
+  font-family: Montserrat;
+  line-height: 1.6;
+}
+
+.inlist {
+  list-style-type: disc;
+}
+
+.inlist li {
+  margin-left: 5vw;
 }
 
 .middleimg{
@@ -65,7 +81,18 @@ p {
   text-transform: uppercase;
   font-weight: 900;
   font-style: bold;
-  font-size: 45px;
+  font-size: 40px;
+  font-size: 2vw;
+  letter-spacing: 0.0555556em;
+}
+
+.projecttiles p{
+  margin: 40px 350px;
+  text-align: center;
+  font-family: Montserrat;
+  font-style: bold;
+  font-size: 25px;
+  font-size: 1.25vw;
   letter-spacing: 0.0555556em;
 }
 
@@ -88,6 +115,8 @@ p {
   padding: 50px;
   font-family: Montserrat;
   font-size: 40px;
+  font-size: 2vw;
+  line-height: 1.3;
 }
 
 .lefttext{
@@ -97,4 +126,6 @@ p {
   padding: 50px;
   font-family: Montserrat;
   font-size: 40px;
+  font-size: 2vw;
+  line-height: 1.3;
 }
