--- a/css/3.css
+++ b/css/3.css
@@ -8,7 +8,7 @@
   height: auto;
 }
 
-.interactive{
+#interactive{
   height: 80vh;
   width: 80vw;
   display: none;
@@ -23,14 +23,30 @@
 }
 
 .projecttilescontainer{
-    position: relative;
     margin: auto;
     text-align: center;
     font-family: Montserrat;
 }
 
-p {
-  margin: auto 10vw;
+.imagemidw {
+    position: relative;
+}
+
+.introduction{
+  margin: auto 13vw;
+  font-size: 25px;
+  font-size: 1.25vw;
+  text-align: left;
+  font-family: Montserrat;
+  line-height: 1.6;
+}
+
+.inlist {
+  list-style-type: disc;
+}
+
+.inlist li {
+  margin-left: 5vw;
 }
 
 .middleimg{
@@ -63,7 +79,18 @@ p {
   text-transform: uppercase;
   font-weight: 900;
   font-style: bold;
-  font-size: 45px;
+  font-size: 40px;
+  font-size: 2vw;
+  letter-spacing: 0.0555556em;
+}
+
+.projecttiles p{
+  margin: 40px 350px;
+  text-align: center;
+  font-family: Montserrat;
+  font-style: bold;
+  font-size: 25px;
+  font-size: 1.25vw;
   letter-spacing: 0.0555556em;
 }
 
@@ -86,6 +113,8 @@ p {
   padding: 50px;
   font-family: Montserrat;
   font-size: 40px;
+  font-size: 2vw;
+  line-height: 1.3;
 }
 
 .lefttext{
@@ -95,4 +124,6 @@ p {
   padding: 50px;
   font-family: Montserrat;
   font-size: 40px;
+  font-size: 2vw;
+  line-height: 1.3;
 }
