--- a/css/5.css
+++ b/css/5.css
@@ -1,18 +1,18 @@
 .projecttiles{
-	margin: 100px auto;
-	text-align: center;
+  margin: 20vh 5vw;
+  text-align: center;
 }
 
 .projecttiles img{
-	width: 50vw;
-	height: auto;
+  width: 50vw;
+  height: auto;
 }
 
-.interactive{
-	height: 80vh;
-	width: 80vw;
-	display: none;
-	margin: auto;
+#interactive{
+  height: 80vh;
+  width: 80vw;
+  display: none;
+  margin: auto;
 }
 
 .iframeholder{
@@ -23,9 +23,30 @@
 }
 
 .projecttilescontainer{
-    position: relative;
     margin: auto;
     text-align: center;
+    font-family: Montserrat;
+}
+
+.imagemidw {
+    position: relative;
+}
+
+.introduction{
+  margin: auto 13vw;
+  font-size: 25px;
+  font-size: 1.25vw;
+  text-align: left;
+  font-family: Montserrat;
+  line-height: 1.6;
+}
+
+.inlist {
+  list-style-type: disc;
+}
+
+.inlist li {
+  margin-left: 5vw;
 }
 
 .middleimg{
@@ -47,7 +68,62 @@
 }
 
 .darken{
-	background-color: black;
-	display: inline-block;
+  background-color: black;
+  display: inline-block;
 }
 
+.projecttitle {
+  margin: 40px 350px;
+  text-align: center;
+  font-family: Montserrat;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-style: bold;
+  font-size: 40px;
+  font-size: 2vw;
+  letter-spacing: 0.0555556em;
+}
+
+.projecttiles p{
+  margin: 40px 350px;
+  text-align: center;
+  font-family: Montserrat;
+  font-style: bold;
+  font-size: 25px;
+  font-size: 1.25vw;
+  letter-spacing: 0.0555556em;
+}
+
+.imgplaceholder{
+  padding-bottom: 10px;
+}
+
+.left{
+  float: left;
+}
+
+.right{
+  float: right;
+}
+
+.righttext{
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  padding: 50px;
+  font-family: Montserrat;
+  font-size: 40px;
+  font-size: 2vw;
+  line-height: 1.3;
+}
+
+.lefttext{
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  padding: 50px;
+  font-family: Montserrat;
+  font-size: 40px;
+  font-size: 2vw;
+  line-height: 1.3;
+}
