--- a/css/6.css
+++ b/css/6.css
@@ -11,15 +11,16 @@
 .interactive{
 	height: 80vh;
 	width: 80vw;
-	display: none;
+	display: inline-block;
 	margin: auto;
+	border: 3px solid black;
 }
 
 .iframeholder{
   opacity: 0.7;
   display: block;
   margin: auto;
-  height: 80vh;
+  height: 90vh;
 }
 
 .projecttilescontainer{
@@ -47,7 +48,6 @@
 }
 
 .darken{
-	background-color: black;
-	display: inline-block;
+  background-color: black;
+  display: inline-block;
 }
-
