--- a/css/6.css
+++ b/css/6.css
@@ -1,5 +1,5 @@
 .projecttiles{
-	margin: 100px auto;
+	margin: 20vh 5vw;
 	text-align: center;
 }
 
@@ -8,25 +8,44 @@
 	height: auto;
 }
 
-.interactive{
+#interactive{
 	height: 80vh;
 	width: 80vw;
-	display: inline-block;
+	display: none;
 	margin: auto;
-	border: 3px solid black;
 }
 
-.iframeholder{
-  opacity: 0.7;
+video{
   display: block;
   margin: auto;
-  height: 90vh;
+  height: 80vh;
 }
 
 .projecttilescontainer{
-    position: relative;
     margin: auto;
     text-align: center;
+    font-family: Montserrat;
+}
+
+.imagemidw {
+    position: relative;
+}
+
+.introduction{
+  margin: auto 13vw;
+  font-size: 25px;
+  font-size: 1.25vw;
+  text-align: left;
+  font-family: Montserrat;
+  line-height: 1.6;
+}
+
+.inlist {
+  list-style-type: disc;
+}
+
+.inlist li {
+  margin-left: 5vw;
 }
 
 .middleimg{
@@ -48,6 +67,62 @@
 }
 
 .darken{
-  background-color: black;
-  display: inline-block;
+	background-color: black;
+	display: inline-block;
+}
+
+.projecttitle {
+  margin: 40px 350px;
+  text-align: center;
+  font-family: Montserrat;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-style: bold;
+  font-size: 40px;
+  font-size: 2vw;
+  letter-spacing: 0.0555556em;
+}
+
+.projecttiles p{
+  margin: 40px 350px;
+  text-align: center;
+  font-family: Montserrat;
+  font-style: bold;
+  font-size: 25px;
+  font-size: 1.25vw;
+  letter-spacing: 0.0555556em;
+}
+
+.imgplaceholder{
+  padding-bottom: 10px;
+}
+
+.left{
+  float: left;
+}
+
+.right{
+  float: right;
+}
+
+.righttext{
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  padding: 50px;
+  font-family: Montserrat;
+  font-size: 40px;
+  font-size: 2vw;
+  line-height: 1.3;
+}
+
+.lefttext{
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  padding: 50px;
+  font-family: Montserrat;
+  font-size: 40px;
+  font-size: 2vw;
+  line-height: 1.3;
 }
