--- a/css/2.css
+++ b/css/2.css
@@ -111,7 +111,7 @@
 .righttext{
   display: table-cell;
   vertical-align: middle;
-  text-align: center;
+  text-align: left;
   padding: 50px;
   font-family: Montserrat;
   font-size: 40px;
@@ -122,7 +122,7 @@
 .lefttext{
   display: table-cell;
   vertical-align: middle;
-  text-align: center;
+  text-align: left;
   padding: 50px;
   font-family: Montserrat;
   font-size: 40px;
