--- a/css/4.css
+++ b/css/4.css
@@ -102,7 +102,7 @@
 .righttext{
   display: table-cell;
   vertical-align: middle;
-  text-align: center;
+  text-align: left;
   padding: 50px;
   font-family: Montserrat;
   font-size: 40px;
@@ -113,7 +113,7 @@
 .lefttext{
   display: table-cell;
   vertical-align: middle;
-  text-align: center;
+  text-align: left;
   padding: 50px;
   font-family: Montserrat;
   font-size: 40px;
