--- a/css/5.css
+++ b/css/5.css
@@ -109,7 +109,7 @@
 .righttext{
   display: table-cell;
   vertical-align: middle;
-  text-align: center;
+  text-align: left;
   padding: 50px;
   font-family: Montserrat;
   font-size: 40px;
@@ -120,7 +120,7 @@
 .lefttext{
   display: table-cell;
   vertical-align: middle;
-  text-align: center;
+  text-align: left;
   padding: 50px;
   font-family: Montserrat;
   font-size: 40px;
